--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "type": "git",
     "url": "git+https://github.com/Yakamoose/blog-api-mongoose.git"
   },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.1",
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
