--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "type": "git",
     "url": "git+https://github.com/Yakamoose/blog-api-mongoose.git"
   },
-  ,"dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "mongoose": "^5.0.6",
-    "morgan": "^1.7.0"
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.1",
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
